--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
     "@nx/next": "16.10.0",
+    "@rudderstack/analytics-js": "3.0.0-beta.12",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
